<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    tools:context=".EditUser"
    >


    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/title_profile"
            android:textSize="55sp"
            android:background="@drawable/border"
             />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_margin="30dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_name"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textSize="25sp"
        />

        <EditText
            android:id="@+id/name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/lab_name" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_role"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/role2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/lab_role" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_outcome"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/bio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/lab_outcome" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_email"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/UpdatePic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_editPic"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>


    </LinearLayout>
</ScrollView>

