<?xml version="1.0" encoding="utf-8"?>
<!--TODO:  matches owner can update create, loged in user can view-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Results"
    android:background="@drawable/gradient"
    >


    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="118dp" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/title_option"
            android:textSize="55sp"

            />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:layout_margin="20dp"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/resprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_profile"
            android:layout_marginTop="500dp"
            android:textSize="30sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>